--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/spring_api_restaurant
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/boot
 spring.datasource.username=root
 spring.datasource.password=MiguelVeloso7
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
